--- a/Day8/D8.ipynb
+++ b/Day8/D8.ipynb
@@ -15,6 +15,155 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "data = pd.read_csv('8.txt', sep =' ', header = None)\n",
+    "data = data.to_numpy()\n",
+    "n = int(len(data[:,0]))\n",
+    "m = int(len(data[0,:]))\n",
+    "change = 11\n",
+    "count = 0\n",
+    "for i in range(n):\n",
+    "    for k in range(change, m):\n",
+    "        l = [ ord(char) for char in data[i,k]]\n",
+    "        l = len(l)\n",
+    "        if l == 2:\n",
+    "            count = count +1 \n",
+    "        if l == 3:\n",
+    "            count = count +1 \n",
+    "        if l == 4:\n",
+    "            count = count +1 \n",
+    "        if l == 7:\n",
+    "            count = count +1 \n",
+    "print( count )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "940724\n"
+     ]
+    }
+   ],
+   "source": [
+    "def create_numbers( l ):\n",
+    "    numbers = np.zeros(10)\n",
+    "    #Find 1\n",
+    "    for k in l:\n",
+    "        if len(k) == 2:\n",
+    "            c = [k]\n",
+    "            l.remove(k)\n",
+    "            numbers[1] = sum([ord(s) for s in k ])\n",
+    "    #find 7 \n",
+    "    for k in l:\n",
+    "        if len(k) == 3:\n",
+    "            c.append(k)\n",
+    "            l.remove(k)\n",
+    "            numbers[7] = sum([ord(s) for s in k ])\n",
+    "    #find 4\n",
+    "    for k in l:\n",
+    "        if len(k) == 4:\n",
+    "            c.append(k)\n",
+    "            l.remove(k)\n",
+    "            numbers[4] = sum([ord(s) for s in k ])\n",
+    "    #find 3 it has all the strings of the seven \n",
+    "    for k in l:\n",
+    "        if(len(k)) == 5:\n",
+    "            b = 0\n",
+    "            for char in k:\n",
+    "                if char in c[1]:\n",
+    "                    b = b +1\n",
+    "            if b == 3:\n",
+    "                c.append(k)\n",
+    "                l.remove(k)\n",
+    "                numbers[3] = sum([ord(s) for s in k ])\n",
+    "    # find 8\n",
+    "    for k in l:\n",
+    "        if len(k) == 7:\n",
+    "            c.append(k)\n",
+    "            l.remove(k)\n",
+    "            numbers[8] = sum([ord(s) for s in k ])\n",
+    "    #find 6 \n",
+    "    for k in l:\n",
+    "        if len(k) == 6:\n",
+    "            b = 0 \n",
+    "            for char in c[0]:\n",
+    "                if char in k:\n",
+    "                    b = b +1\n",
+    "            if b == 1:\n",
+    "                c.append(k)\n",
+    "                l.remove(k)\n",
+    "                numbers[6] = sum([ord(s) for s in k ])\n",
+    "    #find 9 \n",
+    "    for k in l:\n",
+    "        if len(k) == 6:\n",
+    "            b = 0 \n",
+    "            for char in c[2]:\n",
+    "                if char in k:\n",
+    "                    b = b +1\n",
+    "            if b == 4:\n",
+    "                c.append(k)\n",
+    "                l.remove(k)\n",
+    "                numbers[9] = sum([ord(s) for s in k ])\n",
+    "    #find 0\n",
+    "    for k in l:\n",
+    "        if len(k) == 6:\n",
+    "            c.append(k)\n",
+    "            l.remove(k)\n",
+    "            numbers[0] = sum([ord(s) for s in k ])\n",
+    "    #find 5\n",
+    "    for k in l:\n",
+    "        if len(k) == 5:\n",
+    "            b = 0 \n",
+    "            for char in c[5]:\n",
+    "                if char in k:\n",
+    "                    b = b +1\n",
+    "            if b == 5:\n",
+    "                c.append(k)\n",
+    "                l.remove(k)\n",
+    "                numbers[5] = sum([ord(s) for s in k ])\n",
+    "    #find2 \n",
+    "    for k in l:\n",
+    "        c.append(k)\n",
+    "        numbers[2] = sum([ord(s) for s in k ])\n",
+    "    myorder = [7, 0, 9, 3, 2, 8, 5, 1, 4, 6 ]\n",
+    "    mylist = [c[i] for i in myorder]\n",
+    "    return( mylist )\n",
+    "\n",
+    "data = pd.read_csv('8.txt', sep =' ', header = None)\n",
+    "data = data.to_numpy()\n",
+    "n = int(len(data[:,0]))\n",
+    "#print( n )\n",
+    "count = 0\n",
+    "for i in range(n):\n",
+    "    \n",
+    "    l = [ s for s in data[i,:10]]\n",
+    "    numbers = create_numbers(l)\n",
+    "    l = [s for s in data[i,11:]]\n",
+    "    num = []\n",
+    "    for k in range(4):\n",
+    "        \n",
+    "        s = l[k]\n",
+    "        for j in range(10):\n",
+    "            if ''.join(sorted(numbers[j])) == ''.join(sorted(s)):\n",
+    "                num.append(str(j) )\n",
+    "                \n",
+    "    #print( int(''.join(num)) )\n",
+    "    count = count + int(''.join(num) )\n",
+    "\n",
+    "print( count  )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
